update email address in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ plugins:
 
 # Podcast Feed settings
 title:          Preserve This Podcast
-email:          podcast@metro.org
+email:          preservethispodcast@protonmail.com
 description:    "Preserve This Podcast is an Andrew W. Mellon grant-funded project hosted by the Metropolitan New York Library Council (METRO) to help podcasters protect their work against the threats of digital decay."
 subtitle:       "A podcast about saving your podcast."
 url:            http://preservethispodcast.org/
